--- a/Konex_Adimo/src/main/resources/templates/home.html
+++ b/Konex_Adimo/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Adimo">
     <meta name="author" content="konex-group">
 
-    <link rel="stylesheet" href="../CSS/home.css">
+    <link rel="stylesheet" href="/css/home.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
@@ -105,7 +105,7 @@
                     <div class="input-block">
                         <div class="city-select">
                             <section class="icon">
-                                <img src="../images/world.png" alt="world" />
+                                <img src="/images/world.png" alt="world" />
                             </section>
                             <select name="city" id="subject">
                                 <option value="">Cidade</option> 
@@ -114,7 +114,7 @@
 
                         <div class="bairro-select">
                             <section class="icon">
-                                <img src="../images/bairro.png" alt="bairro" />
+                                <img src="/images/bairro.png" alt="bairro" />
                             </section>
                             <select name="bairro" id="subject">
                                 <option value="">Selecione o bairro desejado</option>
@@ -131,19 +131,19 @@
             <div class="first-list">
                 <section class="first-option">
                     <div class="description content">  
-                        <img src="../images/appartment-galia.png" alt="image">
+                        <img src="/images/appartment-galia.png" alt="image">
                         <h4>Rua Gália - Morumbi</h4>
                         <div class="info">
                             <div class="area">
-                                <img src="../images/area-icon.png" alt="area">
+                                <img src="/images/area-icon.png" alt="area">
                                 <span>130 m2</span>
                             </div>
                             <div class="room">
-                                <img src="../images/room-icon.png" alt="icon">
+                                <img src="/images/room-icon.png" alt="icon">
                                 <span>6 Cômodos</span>
                             </div>
                             <div class="spot">
-                                <img src="../images/car-icon.png" alt="icon">
+                                <img src="/images/car-icon.png" alt="icon">
                                 <span>1 vaga</span>
                             </div>
                         </div>
@@ -156,19 +156,19 @@
 
                 <section class="second-option">
                     <div class="description content">  
-                        <img src="../images/appartment-alice.png" alt="image">
+                        <img src="/images/appartment-alice.png" alt="image">
                         <h4>Rua Alice Gonsalves - Morumbi</h4>
                         <div class="info">
                             <div class="area">
-                                <img src="../images/area-icon.png" alt="area">
+                                <img src="/images/area-icon.png" alt="area">
                                 <span>90 m2</span>
                             </div>
                             <div class="room">
-                                <img src="../images/room-icon.png" alt="icon">
+                                <img src="/images/room-icon.png" alt="icon">
                                 <span>4 Cômodos</span>
                             </div>
                             <div class="spot">
-                                <img src="../images/car-icon.png" alt="icon">
+                                <img src="/images/car-icon.png" alt="icon">
                                 <span>1 vaga</span>
                             </div>
                         </div>
@@ -181,19 +181,19 @@
 
                 <section class="third-option">
                     <div class="description content">  
-                        <img src="../images/appartment-attilio.png" alt="image">
+                        <img src="/images/appartment-attilio.png" alt="image">
                         <h4>Rua Attilio Regulo Arena - Morumbi</h4>
                         <div class="info">
                             <div class="area">
-                                <img src="../images/area-icon.png" alt="area">
+                                <img src="/images/area-icon.png" alt="area">
                                 <span>160 m2</span>
                             </div>
                             <div class="room">
-                                <img src="../images/room-icon.png" alt="icon">
+                                <img src="/images/room-icon.png" alt="icon">
                                 <span>8 Cômodos</span>
                             </div>
                             <div class="spot">
-                                <img src="../images/car-icon.png" alt="icon">
+                                <img src="/images/car-icon.png" alt="icon">
                                 <span>2 vaga</span>
                             </div>
                         </div>
@@ -208,19 +208,19 @@
             <div class="second-list">
                 <section class="first-option">
                     <div class="description content">  
-                        <img src="../images/galia2.png" alt="image">
+                        <img src="/images/galia2.png" alt="image">
                         <h4>Rua Gália - Morumbi</h4>
                         <div class="info">
                             <div class="area">
-                                <img src="../images/area-icon.png" alt="area">
+                                <img src="/images/area-icon.png" alt="area">
                                 <span>100 m2</span>
                             </div>
                             <div class="room">
-                                <img src="../images/room-icon.png" alt="icon">
+                                <img src="/images/room-icon.png" alt="icon">
                                 <span>5 Cômodos</span>
                             </div>
                             <div class="spot">
-                                <img src="../images/car-icon.png" alt="icon">
+                                <img src="/images/car-icon.png" alt="icon">
                                 <span>1 vaga</span>
                             </div>
                         </div>
@@ -233,19 +233,19 @@
 
                 <section class="second-option">
                     <div class="description content">  
-                        <img src="../images/alice2.png" alt="image">
+                        <img src="/images/alice2.png" alt="image">
                         <h4>Rua Alice Gonsalves - Morumbi</h4>
                         <div class="info">
                             <div class="area">
-                                <img src="../images/area-icon.png" alt="area">
+                                <img src="/images/area-icon.png" alt="area">
                                 <span>90 m2</span>
                             </div>
                             <div class="room">
-                                <img src="../images/room-icon.png" alt="icon">
+                                <img src="/images/room-icon.png" alt="icon">
                                 <span>4 Cômodos</span>
                             </div>
                             <div class="spot">
-                                <img src="../images/car-icon.png" alt="icon">
+                                <img src="/images/car-icon.png" alt="icon">
                                 <span>1 vaga</span>
                             </div>
                         </div>
@@ -258,19 +258,19 @@
 
                 <section class="third-option">
                     <div class="description content">  
-                        <img src="../images/appartment-aristeu.png" alt="image">
+                        <img src="/images/appartment-aristeu.png" alt="image">
                         <h4>Rua Aristeu Seixas- Morumbi</h4>
                         <div class="info">
                             <div class="area">
-                                <img src="../images/area-icon.png" alt="area">
+                                <img src="/images/area-icon.png" alt="area">
                                 <span>115 m2</span>
                             </div>
                             <div class="room">
-                                <img src="../images/room-icon.png" alt="icon">
+                                <img src="/images/room-icon.png" alt="icon">
                                 <span>6 Cômodos</span>
                             </div>
                             <div class="spot">
-                                <img src="../images/car-icon.png" alt="icon">
+                                <img src="/images/car-icon.png" alt="icon">
                                 <span>1 vaga</span>
                             </div>
                         </div>
@@ -297,7 +297,7 @@
             </article>
 
             <section>
-                <img src="../images/keys-image.png" alt="image" />
+                <img src="/images/keys-image.png" alt="image" />
             </section>
         </div>
     </div>
@@ -311,7 +311,7 @@
 
                 <div class="champions">
                     <section class="image">
-                        <img src="../images/trophy.png" alt="image" />
+                        <img src="/images/trophy.png" alt="image" />
                     </section>
                     <div class="text">
                         <h4>Porque somos os melhores?</h4>
@@ -321,7 +321,7 @@
 
                 <div class="do-appointment">
                     <section class="image">
-                        <img src="../images/clean.png" alt="image" />
+                        <img src="/images/clean.png" alt="image" />
                     </section>
                     <div class="text">
                         <h4>Fazemos consultas</h4>
@@ -332,7 +332,7 @@
 
                 <div class="priceless">
                     <section class="image">
-                        <img src="../images/calendar.png" alt="image" />
+                        <img src="/images/calendar.png" alt="image" />
                     </section>
                     <div class="text">
                         <h4>Sem custo para visitas</h4>
@@ -343,7 +343,7 @@
             </article>
 
             <section>
-                <img src="../images/house.png" alt="image" />
+                <img src="/images/house.png" alt="image" />
             </section>
         </div>
     </div>
@@ -351,7 +351,7 @@
     <div class="warnings-container">
         <div class="rooftop-footer">
             <section>
-                <img src="../images/holding-house.png" alt="image" />
+                <img src="/images/holding-house.png" alt="image" />
             </section>
 
             <article>
