Incluído a dependência thymeleaf e atualizado o banco de dados.

--- a/Konex_Adimo/src/main/resources/templates/selection.html
+++ b/Konex_Adimo/src/main/resources/templates/selection.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Adimo">
     <meta name="author" content="konex-group">
 
-    <link rel="stylesheet" href="../CSS/selection.css">
+    <link rel="stylesheet" href="/css/selection.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
@@ -96,7 +96,7 @@
         <main class="main-page">
             <div class="inline-block-container">
                 <section class="image">
-                    <img src="../images/kitchen.png" alt="image" />
+                    <img src="/images/kitchen.png" alt="image" />
                 </section>
 
                 <article class="about">
@@ -128,7 +128,7 @@
                                 </svg>
                                 <span>Salvar</span>
                             </button>
-                            <img src="../images/call.png" alt="icon" />
+                            <img src="/images/call.png" alt="icon" />
                         </footer>
                     </div>
                 </article>
@@ -143,19 +143,19 @@
 
                 <div class="icons">
                     <section class="area">
-                        <img src="../images/area-icon.png" alt="area" />
+                        <img src="/images/area-icon.png" alt="area" />
                         <span>160 m2</span>
                     </section>
                     <section class="rooms">
-                        <img src="../images/room-icon.png" alt="room" />
+                        <img src="/images/room-icon.png" alt="room" />
                         <span>8 Cômodos</span>
                     </section>
                     <section class="spot">
-                        <img src="../images/car-icon.png" alt="car">
+                        <img src="/images/car-icon.png" alt="car">
                         <span>2 vagas</span>
                     </section>
                     <section class="address">
-                        <img src="../images/address.png" alt="address" />
+                        <img src="/images/address.png" alt="address" />
                         <span>Rua Attilio Regulo Arena - Morumbi</span>
                     </section>
                 </div>
@@ -168,19 +168,19 @@
 
                 <div class="icons">
                     <section class="area">
-                        <img src="../images/sport.png" alt="sports" />
+                        <img src="/images/sport.png" alt="sports" />
                         <span>Quadras esportivas</span>
                     </section>
                     <section class="rooms">
-                        <img src="../images/shopping.png" alt="shop" />
+                        <img src="/images/shopping.png" alt="shop" />
                         <span>Mercados</span>
                     </section>
                     <section class="spot">
-                        <img src="../images/pharmacy.png" alt="pharmacy">
+                        <img src="/images/pharmacy.png" alt="pharmacy">
                         <span>Farmácias</span>
                     </section>
                     <section class="address">
-                        <img src="../images/bycicle.png" alt="bycicle" />
+                        <img src="/images/bycicle.png" alt="bycicle" />
                         <span>Ciclovias</span>
                     </section>
                 </div>
