--- a/Konex_Adimo/src/main/resources/templates/selection.html
+++ b/Konex_Adimo/src/main/resources/templates/selection.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <title>Seleção</title>
@@ -8,6 +8,7 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="description" content="Adimo">
     <meta name="author" content="konex-group">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script th:src="@{/js/addFavorito.js}"></script>
 
     <link rel="stylesheet" href="/css/selection.css">
@@ -96,13 +97,14 @@
             </header>
         </div>
 
-        <main class="main-page">
+        <main class="main-page" th:each="imo, stat: ${imovel}">
             <div class="inline-block-container">
                 <section class="image">
-                    <img src="/images/kitchen.png" alt="image" />
+                	<img th:src="${imo.foto}" alt="image">
+                    <!-- <img src="/images/kitchen.png" alt="image" /> -->
                 </section>
 
-                <article class="about" th:each="imo, stat: ${imovel}">
+                <article class="about" >
                     <div class="code_customer">
                         <p>Cód. </p><p th:text="${imo.idImov}"></p>
 
@@ -129,8 +131,8 @@
                                     </clipPath>
                                     </defs>
                                 </svg>
-                            <a th:href="@{/imovel/favoritos/{id}(id=${imo.idImov})}">
-                            	<span id="addFavorito" th:value="${imo.idImov}">Salvar</span>
+                           <!--  <a th:href="@{/imovel/favoritos/{id}(id=${imo.idImov})}"> -->
+                            	<span id="addFavorito" th:value="${imo.idImov}">Salvar</button>
                             </a>
                             </button>
                             <img src="/images/call.png" alt="icon" />
