Incluído o end point imovel.

--- a/Konex_Adimo/src/main/resources/templates/selection.html
+++ b/Konex_Adimo/src/main/resources/templates/selection.html
@@ -131,9 +131,7 @@
                                     </clipPath>
                                     </defs>
                                 </svg>
-                           <!--  <a th:href="@{/imovel/favoritos/{id}(id=${imo.idImov})}"> -->
-                            	<span id="addFavorito" th:value="${imo.idImov}">Salvar</button>
-                            </a>
+                            	<button id="addFavorito" th:value="${imo.idImov}">Salvar</button>
                             </button>
                             <img src="/images/call.png" alt="icon" />
                         </footer>
