--- a/Konex_Adimo/src/main/resources/templates/favoritos.html
+++ b/Konex_Adimo/src/main/resources/templates/favoritos.html
@@ -102,8 +102,8 @@
             <div class="first-list" th:if="${imovel != null}">
                 <section class="first-option" th:each="imo, stat: ${imovel}">
                     <div class="description content">  
-                        <img src="/images/appartment-galia.png" alt="image">
-                        <h4 th:text="${imo.logradouro}"></h4> - Morumbi<h4></h4>
+                        <img th:src="${imo.foto}" alt="image">
+                        <h4 th:text="${imo.logradouro + ' - ' + imo.bairro.nome}"></h4>
                         <div class="info">
                             <div class="area">
                                 <img src="/images/area-icon.png" alt="area">
