Updated applying color to link favoritos

--- a/Konex_Adimo/src/main/resources/static/css/selection.css
+++ b/Konex_Adimo/src/main/resources/static/css/selection.css
@@ -29,6 +29,9 @@ body{
     padding-right:40px;
     cursor:pointer;
 }
+#container-landing ul li:nth-child(2) a{
+	color:#303030;
+}
 #container-landing ul li svg{
     margin-right:16px;
 }
