Trabalhando com permissões e restrições

--- a/Konex_Adimo/src/main/resources/templates/home.html
+++ b/Konex_Adimo/src/main/resources/templates/home.html
@@ -91,7 +91,7 @@
                                     </defs>
                                 </svg>    
                             </span>
-                            <span>Área Restrita</span>
+                            <a th:href="@{/entrarpage}"><span>Área Restrita</span ></a>
                         </button>
                     </ul>
                 </div>
