--- a/Konex_Adimo/src/main/resources/templates/painel.html
+++ b/Konex_Adimo/src/main/resources/templates/painel.html
@@ -242,7 +242,7 @@
                                 <td id="alutb" th:text="'R$'+${imoAlu.valor}"></td>
                                 <td id="btnsTb">
                                 <form>
-                                    <button>
+                                    <button style ="width: -50px;">
                                         <svg width="13" height="15" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M12.5 2.5H9.375V1.25C9.375 0.918479 9.24331 0.600537 9.00889 0.366117C8.77447 0.131696 8.45652 0 8.125 0L4.375 0C4.04348 0 3.72554 0.131696 3.49112 0.366117C3.2567 0.600537 3.125 0.918479 3.125 1.25V2.5H0V3.75H1.25V13.125C1.25 13.6223 1.44754 14.0992 1.79918 14.4508C2.15081 14.8025 2.62772 15 3.125 15H9.375C9.87228 15 10.3492 14.8025 10.7008 14.4508C11.0525 14.0992 11.25 13.6223 11.25 13.125V3.75H12.5V2.5ZM4.375 1.25H8.125V2.5H4.375V1.25ZM10 13.125C10 13.2908 9.93416 13.4497 9.81695 13.5669C9.69973 13.6842 9.54076 13.75 9.375 13.75H3.125C2.95924 13.75 2.80027 13.6842 2.68306 13.5669C2.56585 13.4497 2.5 13.2908 2.5 13.125V3.75H10V13.125Z" fill="#39A55E"/>
                                             <path d="M5.625 6.24998H4.375V11.25H5.625V6.24998Z" fill="#39A55E"/>
