--- a/Konex_Adimo/src/main/resources/static/css/home.css
+++ b/Konex_Adimo/src/main/resources/static/css/home.css
@@ -1,4 +1,3 @@
-
 *{
     margin:0;
     padding:0;
@@ -27,7 +26,7 @@
     padding-right:40px;
     cursor:pointer;
 }
-#container-landing ul li:first-child{
+#container-landing ul li:first-child a{
     color:#39A55E;
     font-weight: 500;
 }
@@ -128,17 +127,20 @@
     background: transparent;
     border: 2px solid #39A55E;
 }
+#container-landing .first-option{
+    width:350.33px;
+    display:inline-block;
+    margin-bottom:40px;
+}
+#container-landing .description > img{
+    width:300px;
+    height:150px;
+}
 #container-landing .description h4{
     margin:20px 0 16px 0;
 }
 #container-landing .first-list{
     margin-bottom:40px;
-}
-#container-landing .first-list, #container-landing .second-list{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
 }
 #container-landing .info{
     display: flex;
